Create new models with channel and session

--- a/real-chat-app/src/app/app.component.html
+++ b/real-chat-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="container">
   <div class="text-center">
-    <div class="col">Hello world</div>
+    <div class="col">Hello world2</div>
   </div>
 </section>
