--- a/real-chat-app/src/app/app.component.html
+++ b/real-chat-app/src/app/app.component.html
@@ -1,5 +1,1 @@
-<section class="container">
-  <div class="text-center">
-    <div class="col">Hello world2</div>
-  </div>
-</section>
+<router-outlet></router-outlet>
