--- a/real-chat-app/src/app/google-auth/google-auth.component.html
+++ b/real-chat-app/src/app/google-auth/google-auth.component.html
@@ -1,5 +1,5 @@
-<div class="auth-component">
-  <button class="proceed" (click)="signIn()">
-    Proceed with <i class="fa fa-google" aria-hidden="true"></i>
-  </button>
-</div>
+<section class="auth-component container">
+  <div class="row  h-100 justify-content-center align-items-center">
+  <button mat-flat-button class="col-2" (click)="signIn()">SignUp with Google</button>
+  </div>
+</section>
