--- a/real-chat-app/src/app/chat/chat-list/chat-list.component.html
+++ b/real-chat-app/src/app/chat/chat-list/chat-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  chat-list works!
-</p>
+<section class="container">
+  <mat-nav-list>
+    <a mat-list-item *ngFor="let chat of chats" href="/chat/{{chat.name}}">{{ chat.name }}</a>
+  </mat-nav-list>
+</section>
+
