Add chat page, implemented chat through router and material

--- a/real-chat-app/src/app/chat/chat-list/chat-list.component.html
+++ b/real-chat-app/src/app/chat/chat-list/chat-list.component.html
@@ -1,4 +1,5 @@
 <section class="container">
+  <p>Chat list</p>
   <mat-nav-list>
     <a mat-list-item *ngFor="let chat of chats" href="/chat/{{chat.name}}">{{ chat.name }}</a>
   </mat-nav-list>
