--- a/real-chat-app/src/app/chat/chat-create/chat-create.component.html
+++ b/real-chat-app/src/app/chat/chat-create/chat-create.component.html
@@ -1,3 +1,3 @@
-<p>
-  chat-create works!
-</p>
+<input mat-input-element type="text" [(ngModel)]="chatName">
+<button mat-button (click)="sendChatName()">Create</button>
+
