--- a/real-chat-app/src/app/chat/chat/chat.component.html
+++ b/real-chat-app/src/app/chat/chat/chat.component.html
@@ -3,5 +3,6 @@
   <div class="message-list"></div>
   <input mat-input-element type="text" [(ngModel)]="text">
   <button mat-button (click)="sendMessage()">Send</button>
+  <button mat-button (click)="sendMessageSocket()">Send through socket</button>
 <!--<MatButtonModule></MatButtonModule>-->
 </section>
