Try work with redis adapter

--- a/real-chat-app/src/app/chat/chat/chat.component.html
+++ b/real-chat-app/src/app/chat/chat/chat.component.html
@@ -2,7 +2,5 @@
   <p>{{ chatName }}</p>
   <div class="message-list"></div>
   <input mat-input-element type="text" [(ngModel)]="text">
-  <button mat-button (click)="sendMessage()">Send</button>
-  <button mat-button (click)="sendMessageSocket()">Send through socket</button>
-<!--<MatButtonModule></MatButtonModule>-->
+  <button mat-button (click)="sendMessageSocket()">Send</button>
 </section>
