Works wth rooms through sockets

--- a/real-chat-app/src/app/chat/chat-create/chat-create.component.html
+++ b/real-chat-app/src/app/chat/chat-create/chat-create.component.html
@@ -1,3 +1,4 @@
 <input mat-input-element type="text" [(ngModel)]="chatName">
+<div>{{this.chatName}}</div>
 <button mat-button (click)="sendChatName()">Create</button>
 
