--- a/real-chat-app/src/app/chat/chat-list/chat-list.component.html
+++ b/real-chat-app/src/app/chat/chat-list/chat-list.component.html
@@ -1,7 +1,7 @@
 <section class="container">
   <p>Chat list</p>
   <mat-nav-list>
-    <a mat-list-item *ngFor="let chat of chats" href="/chat/{{chat.name}}">{{ chat.name }}</a>
+    <a mat-list-item *ngFor="let room of rooms" href="/chat/{{room.name}}">{{ room.name }}</a>
   </mat-nav-list>
 </section>
 
