Get history of Messages

--- a/real-chat-app/src/app/chat/chat/chat.component.html
+++ b/real-chat-app/src/app/chat/chat/chat.component.html
@@ -3,5 +3,7 @@
   <div class="message-list"></div>
   <input matInput type="text" [(ngModel)]="text">
   <button mat-button (click)="sendMessageSocket()">Send</button>
-  <section class="messages"><div *ngFor="let message of messages">{{ message.text }}</div></section>
+  <mat-nav-list>
+    <mat-list-item *ngFor="let message of messages">{{ message.text }}</mat-list-item>
+  </mat-nav-list>
 </section>
